# PurePyFstlib

./: .gitignore  CHANGELOG.md  README.md  README_zh.md  pyproject.toml
src/: __init__.py  common.py  compression.py  reader.py  varint.py  writer.py
src/truepyfstlib/: __init__.py  common.py  reader.py  varint.py  writer.py
test_fixtures/: build.ps1  counter.v  vcd_analyzer.py
tests/: verify_roundtrip.py
verify/: baseline.json  bench.py  crosscheck.py  roundtrip.py  verify_golden.py  verify_reader.py  verify_strict.py  verify_writer.py
verify/fixtures/: .gitignore  alias_test.v  bench.v  build.ps1  build.sh  many_signals.v  nested.v  simple.v  string_test.v  widths.v  xz_init.v
