[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "truepyfstlib"
version = "0.2.0"
description = "Pure Python FST waveform file reader and writer"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "neveltyc", email = "neveltyc@gmail.com"}
]
keywords = ["fst", "waveform", "gtkwave", "verilog", "vhdl", "vcd"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]

[project.urls]
Homepage = "https://github.com/neveltyc/PurePyFstlib"
Repository = "https://github.com/neveltyc/PurePyFstlib"

[tool.setuptools.packages.find]
where = ["src"]
